updating key